bin/tests/snapshots/collapsible_let_in__f9545ef768954a51771885c60c1bca1a_lint_errfmt.snap
---
source: bin/tests/collapsible_let_in.rs
---
let
  a.b = 1;
in
let
  c = 2;
in
c
---
<temp_file_path>>1:1:W:6:[collapsible_let_in] This `let in` expression contains a nested `let in` expression
<temp_file_path>>4:1:W:6:[collapsible_let_in] This `let in` expression is nested
