bin/tests/snapshots/collapsible_let_in__fe25e67d93fa84cbd3753185f7f64e63_fix.snap
---
source: bin/tests/collapsible_let_in.rs
---
let
  x = f y;
in
let
  z = 1;
in
x
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1,7 +1,6 @@
 let
   x = f y;
-in
-let
+
   z = 1;
 in
 x
