bin/tests/snapshots/collapsible_let_in__fe25e67d93fa84cbd3753185f7f64e63_lint.snap
---
source: bin/tests/collapsible_let_in.rs
---
let
  x = f y;
in
let
  z = 1;
in
x
---
[collapsible_let_in] Warning: These let-in expressions are collapsible
   ╭─[ <temp_file_path>:1:1 ]
   │
 1 │ ╭───▶ let
   ┆ ┆     
 4 │ │ ╭─▶ let
   ┆ ┆ ┆   
 7 │ │ ├─▶ x
   │ │ │   │   
   │ │ ╰─────── This let in expression is nested
   │ │     │   
   │ ╰─────┴─── This let in expression contains a nested let in expression
───╯
