bin/tests/snapshots/collapsible_let_in__fe25e67d93fa84cbd3753185f7f64e63_lint_json.snap
---
source: bin/tests/collapsible_let_in.rs
---
let
  x = f y;
in
let
  z = 1;
in
x
---
{
  "file": "<temp_file_path>",
  "report": [
    {
      "name": "collapsible_let_in",
      "note": "These let-in expressions are collapsible",
      "code": 6,
      "severity": "Warn",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 1,
              "column": 1
            },
            "to": {
              "line": 7,
              "column": 2
            }
          },
          "message": "This `let in` expression contains a nested `let in` expression",
          "suggestion": null,
          "fixable": false
        },
        {
          "at": {
            "from": {
              "line": 4,
              "column": 1
            },
            "to": {
              "line": 7,
              "column": 2
            }
          },
          "message": "This `let in` expression is nested",
          "suggestion": {
            "at": {
              "from": {
                "line": 3,
                "column": 1
              },
              "to": {
                "line": 4,
                "column": 4
              }
            },
            "fix": ""
          },
          "fixable": true
        }
      ]
    }
  ]
}
