bin/tests/snapshots/collapsible_let_in__fix_18da6f292bd315cb247b50296420adbab5b7dce508fb8402cd4980a4cde9df89.snap
---
source: bin/tests/collapsible_let_in.rs
expression: "\"let\\n  a = 2;\\n  b = 3;\\nin\\nlet\\n  c = 5;\\n  d = 6;\\nin\\na + b + c + d\\n\""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1,9 +1,8 @@
 let
   a = 2;
   b = 3;
-in
-let
+
   c = 5;
   d = 6;
 in
 a + b + c + d
