bin/tests/snapshots/collapsible_let_in__fix_242e52309c5ca7eb4915bef9f7847ae24c06b7b315a440111776c6d18e110b0c.snap
---
source: bin/tests/collapsible_let_in.rs
---
let
  xs = [a b c ];
in
let
  a = 1;
in
xs

---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1,8 +1,7 @@
 let
   xs = [a b c ];
-in
-let
+
   a = 1;
 in
 xs
