bin/tests/snapshots/collapsible_let_in__fix_2e638014232f7dec2606c940ad2e97f6bc6e69b287eb01500ede7d3ce0b7fbba.snap
---
source: bin/tests/collapsible_let_in.rs
expression: "\"let\\n  x = a.b;\\nin\\nlet\\n  b = 1;\\nin\\nx\\n\""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1,8 +1,7 @@
 let
   x = a.b;
-in
-let
+
   b = 1;
 in
 x
