bin/tests/snapshots/collapsible_let_in__fix_4140e8994d45a535d44e5aefd96a6be1bcd903057efd93fa8e3ac94897189d68.snap
---
source: bin/tests/collapsible_let_in.rs
---
let
  x = f a;
in
let
  a = 1;
in
x

---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1,8 +1,7 @@
 let
   x = f a;
-in
-let
+
   a = 1;
 in
 x
